y.output
Terminales no usados en gramática

   TOK_IGNORED
   TOK_SALTOLINEA
   TOK_ERROR


Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA

    2 declaraciones: declaracion
    3              | declaracion declaraciones

    4 declaracion: clase identificadores TOK_PUNTOYCOMA

    5 clase: clase_escalar
    6      | clase_vector

    7 clase_escalar: tipo

    8 tipo: TOK_INT
    9     | TOK_BOOLEAN

   10 clase_vector: TOK_ARRAY tipo TOK_LLAVEIZQUIERDA constante_entera TOK_LLAVEDERECHA

   11 identificadores: identificador
   12                | identificador TOK_COMA identificadores

   13 funciones: funcion funciones
   14          | %empty

   15 funcion: TOK_FUNCTION tipo identificador TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

   16 parametros_funcion: parametro_funcion resto_parametros_funcion
   17                   | %empty

   18 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   19                         | %empty

   20 parametro_funcion: tipo identificador

   21 declaraciones_funcion: declaraciones
   22                      | %empty

   23 sentencias: sentencia
   24           | sentencia sentencias

   25 sentencia: sentencia_simple TOK_PUNTOYCOMA
   26          | bloque

   27 sentencia_simple: asignacion
   28                 | lectura
   29                 | escritura
   30                 | retorno_funcion

   31 bloque: condicional
   32       | bucle

   33 asignacion: identificador TOK_ASIGNACION exp
   34           | elemento_vector TOK_ASIGNACION exp

   35 elemento_vector: identificador TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   36 condicional: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   37            | TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   38 bucle: TOK_WHILE TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   39 lectura: TOK_SCANF identificador

   40 escritura: TOK_PRINTF exp

   41 retorno_funcion: TOK_RETURN exp

   42 exp: exp TOK_MAS exp
   43    | exp TOK_MENOS exp
   44    | exp TOK_DIVISION exp
   45    | exp TOK_ASTERISCO exp
   46    | contrario
   47    | exp TOK_AND exp
   48    | exp TOK_OR exp
   49    | TOK_MENOS contrario exp
   50    | TOK_NOT exp
   51    | identificador
   52    | constante
   53    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   54    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   55    | elemento_vector
   56    | identificador TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   57 lista_expresiones: exp resto_lista_expresiones
   58                  | %empty

   59 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   60                        | %empty

   61 comparacion: exp TOK_IGUAL exp
   62            | exp TOK_DISTINTO exp
   63            | exp TOK_MENORIGUAL exp
   64            | exp TOK_MAYORIGUAL exp
   65            | exp TOK_MENOR exp
   66            | exp TOK_MAYOR exp

   67 constante: constante_logica
   68          | constante_entera

   69 constante_logica: TOK_TRUE
   70                 | TOK_FALSE

   71 constante_entera: TOK_CONSTANTE_ENTERA

   72 identificador: TOK_IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 8
TOK_BOOLEAN (260) 9
TOK_ARRAY (261) 10
TOK_FUNCTION (262) 15
TOK_IF (263) 36 37
TOK_ELSE (264) 37
TOK_WHILE (265) 38
TOK_SCANF (266) 39
TOK_PRINTF (267) 40
TOK_RETURN (268) 41
TOK_PUNTOYCOMA (269) 4 18 25
TOK_COMA (270) 12 59
TOK_PARENTESISIZQUIERDO (271) 15 36 37 38 53 54 56
TOK_PARENTESISDERECHO (272) 15 36 37 38 53 54 56
TOK_CORCHETEIZQUIERDO (273) 35
TOK_CORCHETEDERECHO (274) 35
TOK_LLAVEIZQUIERDA (275) 1 10 15 36 37 38
TOK_LLAVEDERECHA (276) 1 10 15 36 37 38
TOK_ASIGNACION (277) 33 34
TOK_MAS (278) 42
TOK_MENOS (279) 43 49
TOK_DIVISION (280) 44
TOK_ASTERISCO (281) 45
TOK_AND (282) 47
TOK_OR (283) 48
TOK_NOT (284) 50
TOK_IGUAL (285) 61
TOK_DISTINTO (286) 62
TOK_MENORIGUAL (287) 63
TOK_MAYORIGUAL (288) 64
TOK_MENOR (289) 65
TOK_MAYOR (290) 66
TOK_IDENTIFICADOR (291) 72
TOK_CONSTANTE_ENTERA (292) 71
TOK_TRUE (293) 69
TOK_FALSE (294) 70
TOK_IGNORED (295)
TOK_SALTOLINEA (296)
TOK_ERROR (297)
contrario (298) 46 49


No terminales con las reglas donde aparecen

$accept (44)
    en la izquierda: 0
programa (45)
    en la izquierda: 1, en la derecha: 0
declaraciones (46)
    en la izquierda: 2 3, en la derecha: 1 3 21
declaracion (47)
    en la izquierda: 4, en la derecha: 2 3
clase (48)
    en la izquierda: 5 6, en la derecha: 4
clase_escalar (49)
    en la izquierda: 7, en la derecha: 5
tipo (50)
    en la izquierda: 8 9, en la derecha: 7 10 15 20
clase_vector (51)
    en la izquierda: 10, en la derecha: 6
identificadores (52)
    en la izquierda: 11 12, en la derecha: 4 12
funciones (53)
    en la izquierda: 13 14, en la derecha: 1 13
funcion (54)
    en la izquierda: 15, en la derecha: 13
parametros_funcion (55)
    en la izquierda: 16 17, en la derecha: 15
resto_parametros_funcion (56)
    en la izquierda: 18 19, en la derecha: 16 18
parametro_funcion (57)
    en la izquierda: 20, en la derecha: 16 18
declaraciones_funcion (58)
    en la izquierda: 21 22, en la derecha: 15
sentencias (59)
    en la izquierda: 23 24, en la derecha: 1 15 24 36 37 38
sentencia (60)
    en la izquierda: 25 26, en la derecha: 23 24
sentencia_simple (61)
    en la izquierda: 27 28 29 30, en la derecha: 25
bloque (62)
    en la izquierda: 31 32, en la derecha: 26
asignacion (63)
    en la izquierda: 33 34, en la derecha: 27
elemento_vector (64)
    en la izquierda: 35, en la derecha: 34 55
condicional (65)
    en la izquierda: 36 37, en la derecha: 31
bucle (66)
    en la izquierda: 38, en la derecha: 32
lectura (67)
    en la izquierda: 39, en la derecha: 28
escritura (68)
    en la izquierda: 40, en la derecha: 29
retorno_funcion (69)
    en la izquierda: 41, en la derecha: 30
exp (70)
    en la izquierda: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56,
    en la derecha: 33 34 35 36 37 38 40 41 42 43 44 45 47 48 49 50
    53 57 59 61 62 63 64 65 66
lista_expresiones (71)
    en la izquierda: 57 58, en la derecha: 56
resto_lista_expresiones (72)
    en la izquierda: 59 60, en la derecha: 57 59
comparacion (73)
    en la izquierda: 61 62 63 64 65 66, en la derecha: 54
constante (74)
    en la izquierda: 67 68, en la derecha: 52
constante_logica (75)
    en la izquierda: 69 70, en la derecha: 67
constante_entera (76)
    en la izquierda: 71, en la derecha: 10 68
identificador (77)
    en la izquierda: 72, en la derecha: 11 12 15 20 33 35 39 51 56


State 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


State 1

    1 programa: TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 3


State 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


State 3

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6
    TOK_ARRAY    desplazar e ir al estado 7

    declaraciones  ir al estado 8
    declaracion    ir al estado 9
    clase          ir al estado 10
    clase_escalar  ir al estado 11
    tipo           ir al estado 12
    clase_vector   ir al estado 13


State 4

    0 $accept: programa $end .

    $default  aceptar


State 5

    8 tipo: TOK_INT .

    $default  reduce usando la regla 8 (tipo)


State 6

    9 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 9 (tipo)


State 7

   10 clase_vector: TOK_ARRAY . tipo TOK_LLAVEIZQUIERDA constante_entera TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6

    tipo  ir al estado 14


State 8

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . funciones sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  desplazar e ir al estado 15

    $default  reduce usando la regla 14 (funciones)

    funciones  ir al estado 16
    funcion    ir al estado 17


State 9

    2 declaraciones: declaracion .
    3              | declaracion . declaraciones

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6
    TOK_ARRAY    desplazar e ir al estado 7

    $default  reduce usando la regla 2 (declaraciones)

    declaraciones  ir al estado 18
    declaracion    ir al estado 9
    clase          ir al estado 10
    clase_escalar  ir al estado 11
    tipo           ir al estado 12
    clase_vector   ir al estado 13


State 10

    4 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificadores  ir al estado 20
    identificador    ir al estado 21


State 11

    5 clase: clase_escalar .

    $default  reduce usando la regla 5 (clase)


State 12

    7 clase_escalar: tipo .

    $default  reduce usando la regla 7 (clase_escalar)


State 13

    6 clase: clase_vector .

    $default  reduce usando la regla 6 (clase)


State 14

   10 clase_vector: TOK_ARRAY tipo . TOK_LLAVEIZQUIERDA constante_entera TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 22


State 15

   15 funcion: TOK_FUNCTION . tipo identificador TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6

    tipo  ir al estado 23


State 16

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 24
    TOK_WHILE          desplazar e ir al estado 25
    TOK_SCANF          desplazar e ir al estado 26
    TOK_PRINTF         desplazar e ir al estado 27
    TOK_RETURN         desplazar e ir al estado 28
    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    sentencias        ir al estado 29
    sentencia         ir al estado 30
    sentencia_simple  ir al estado 31
    bloque            ir al estado 32
    asignacion        ir al estado 33
    elemento_vector   ir al estado 34
    condicional       ir al estado 35
    bucle             ir al estado 36
    lectura           ir al estado 37
    escritura         ir al estado 38
    retorno_funcion   ir al estado 39
    identificador     ir al estado 40


State 17

   13 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 15

    $default  reduce usando la regla 14 (funciones)

    funciones  ir al estado 41
    funcion    ir al estado 17


State 18

    3 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 3 (declaraciones)


State 19

   72 identificador: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 72 (identificador)


State 20

    4 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 42


State 21

   11 identificadores: identificador .
   12                | identificador . TOK_COMA identificadores

    TOK_COMA  desplazar e ir al estado 43

    $default  reduce usando la regla 11 (identificadores)


State 22

   10 clase_vector: TOK_ARRAY tipo TOK_LLAVEIZQUIERDA . constante_entera TOK_LLAVEDERECHA

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 44

    constante_entera  ir al estado 45


State 23

   15 funcion: TOK_FUNCTION tipo . identificador TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificador  ir al estado 46


State 24

   36 condicional: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   37            | TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 47


State 25

   38 bucle: TOK_WHILE . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 48


State 26

   39 lectura: TOK_SCANF . identificador

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificador  ir al estado 49


State 27

   40 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54
    contrario                desplazar e ir al estado 55

    elemento_vector   ir al estado 56
    exp               ir al estado 57
    constante         ir al estado 58
    constante_logica  ir al estado 59
    constante_entera  ir al estado 60
    identificador     ir al estado 61


State 28

   41 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54
    contrario                desplazar e ir al estado 55

    elemento_vector   ir al estado 56
    exp               ir al estado 62
    constante         ir al estado 58
    constante_logica  ir al estado 59
    constante_entera  ir al estado 60
    identificador     ir al estado 61


State 29

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 63


State 30

   23 sentencias: sentencia .
   24           | sentencia . sentencias

    TOK_IF             desplazar e ir al estado 24
    TOK_WHILE          desplazar e ir al estado 25
    TOK_SCANF          desplazar e ir al estado 26
    TOK_PRINTF         desplazar e ir al estado 27
    TOK_RETURN         desplazar e ir al estado 28
    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    $default  reduce usando la regla 23 (sentencias)

    sentencias        ir al estado 64
    sentencia         ir al estado 30
    sentencia_simple  ir al estado 31
    bloque            ir al estado 32
    asignacion        ir al estado 33
    elemento_vector   ir al estado 34
    condicional       ir al estado 35
    bucle             ir al estado 36
    lectura           ir al estado 37
    escritura         ir al estado 38
    retorno_funcion   ir al estado 39
    identificador     ir al estado 40


State 31

   25 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 65


State 32

   26 sentencia: bloque .

    $default  reduce usando la regla 26 (sentencia)


State 33

   27 sentencia_simple: asignacion .

    $default  reduce usando la regla 27 (sentencia_simple)


State 34

   34 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  desplazar e ir al estado 66


State 35

   31 bloque: condicional .

    $default  reduce usando la regla 31 (bloque)


State 36

   32 bloque: bucle .

    $default  reduce usando la regla 32 (bloque)


State 37

   28 sentencia_simple: lectura .

    $default  reduce usando la regla 28 (sentencia_simple)


State 38

   29 sentencia_simple: escritura .

    $default  reduce usando la regla 29 (sentencia_simple)


State 39

   30 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 30 (sentencia_simple)


State 40

   33 asignacion: identificador . TOK_ASIGNACION exp
   35 elemento_vector: identificador . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 67
    TOK_ASIGNACION         desplazar e ir al estado 68


State 41

   13 funciones: funcion funciones .

    $default  reduce usando la regla 13 (funciones)


State 42

    4 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce usando la regla 4 (declaracion)


State 43

   12 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificadores  ir al estado 69
    identificador    ir al estado 21


State 44

   71 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 71 (constante_entera)


State 45

   10 clase_vector: TOK_ARRAY tipo TOK_LLAVEIZQUIERDA constante_entera . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 70


State 46

   15 funcion: TOK_FUNCTION tipo identificador . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 71


State 47

   36 condicional: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   37            | TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54
    contrario                desplazar e ir al estado 55

    elemento_vector   ir al estado 56
    exp               ir al estado 72
    constante         ir al estado 58
    constante_logica  ir al estado 59
    constante_entera  ir al estado 60
    identificador     ir al estado 61


State 48

   38 bucle: TOK_WHILE TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54
    contrario                desplazar e ir al estado 55

    elemento_vector   ir al estado 56
    exp               ir al estado 73
    constante         ir al estado 58
    constante_logica  ir al estado 59
    constante_entera  ir al estado 60
    identificador     ir al estado 61


State 49

   39 lectura: TOK_SCANF identificador .

    $default  reduce usando la regla 39 (lectura)


State 50

   53 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   54    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54
    contrario                desplazar e ir al estado 55

    elemento_vector   ir al estado 56
    exp               ir al estado 74
    comparacion       ir al estado 75
    constante         ir al estado 58
    constante_logica  ir al estado 59
    constante_entera  ir al estado 60
    identificador     ir al estado 61


State 51

   49 exp: TOK_MENOS . contrario exp

    contrario  desplazar e ir al estado 76


State 52

   50 exp: TOK_NOT . exp
